--- a/style.css
+++ b/style.css
@@ -3,3 +3,12 @@
     padding: 0;
     font-family: 'Dongle', sans-serif;
 }
+
+.header{
+    min-height: 100vh;
+    width: 100%;
+    background-image: linear-gradient(rgba(4,9,30,0.7 ),rgba(4,9,30,0.7)),url(images/dawn-1840298.jpg);
+    background-position: center;
+    background-size: cover;
+    position: relative;
+}
